# portafolio_ml

./: .env.example  .gitignore  README.md  api.py  concat_project.py  correciones.md  correciones2.md  hello_numerai.ipynb  mt5linux.sh  pyproject.toml  repomix-output.md  repomix-output.xml
app/: streamlit_app.py
app/pages/: 1_Live_Trading.py
data/: mt5_orders.db  orders.db
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
mt5/: FileCommander.ex5  FileCommander.mq5  SocketServer.mq5
scripts/: generate_report.py  live_bot.py  live_bot_mt5.py  numerai_submission.py
src/backtest/: __init__.py  costs.py  engine.py  sizing.py
src/config/: __init__.py  experiments.py  settings.py
src/data/: __init__.py  cache.py  loader.py  schemas.py
src/evaluation/: __init__.py  metrics.py  monte_carlo.py  pdf_report.py  reports.py
src/execution/: __init__.py  alpaca_engine.py  mt5_executor.py
src/ml/: __init__.py  features.py  model.py  optimization.py
src/optimization/: __init__.py  wfo.py
src/strategy/: __init__.py  base.py  indicators.py  ma_cross.py
src/ui/: styles.py
tests/: test_backtest.py  test_data.py  test_ml.py  test_strategy.py
